# irene3

./: .dockerignore  .env  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  INSTALL.md  README.md  USAGE.md  build.gradle  eval.Dockerfile  gradle.properties  justfile  settings.gradle
.github/: dependabot.yml
.github/workflows/: add_to_project.yml  ci.yml  cleanup.yml  metrics.yml
challenge-readmes/: Chal10VLEppc.md  Chal10arm.md  Chal10ppc.md  INSTALL.md  README.md
cmake/: git_watcher.cmake  irene3Config.cmake.in  options.cmake  vcpkg_helper.cmake
data_formats/: functions.proto  specification.proto
data_specifications/: specification.proto
docs/: 2022-10-11-hackathon-instructions.md  2024-01-08-demo-instructions.md  metrics-dashboard.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  installation.md  intro.md  readme.md
docs/book/src/cli/: irene-lift.md  irene-lower.md  llvm_decomp.md  patch-assembler.md  readme.md
docs/book/src/ghidra/: gui.md  readme.md  slicing.md  specify.md
docs/book/src/lang_ref/: expressions.md  intro.md  locations.md  statements.md  tdecls.md  types.md
docs/book/src/lang_ref/tdecls/: externalfunction.md  externalglobal.md  function.md  region.md  typedecl.md
eval-scripts/: README.md  docker_runner.sh  pyproject.toml
eval-scripts/eval_scripts/: run_differential_test.py
eval-scripts/tests/: test_eval_scripts.py
example/: example  example.c
include/: CMakeLists.txt
include/irene3/: CMakeLists.txt  Codegen.h  DecompileSpec.h  ILIMixin.h  IreneLoweringInterface.h  LowLocCCBuilder.h  PatchCompiler.h  PatchIRCodegen.h  PhysicalLocationDecoder.h  RegTable.h  TypeDecoder.h  Util.h  Version.h
include/irene3/PatchIR/: CMakeLists.txt  PatchIR.td  PatchIRAttrs.h  PatchIRAttrs.td  PatchIRDialect.h  PatchIROps.h  PatchIROps.td  PatchIRTypes.h  PatchIRTypes.td
include/irene3/PatchLang/: Expr.h  Exprs.h  Lexer.h  Lifter.h  Location.h  Locations.h  Parser.h  SExprPrinter.h  Stmt.h  Type.h  Types.h
include/irene3/Targets/: Backend.h  Components.h  ExplicitMappingBackend.h  GenericBackend.h
include/irene3/Transforms/: ModuleBBPass.h  PostPass.h  PostWrappingPass.h  RemoveProgramCounterAndMemory.h  RemoveUnusedStackValueOperands.h  ReplaceRelReferences.h  RestoreStackRelations.h  WrapBBFuncPass.h  WrapBBFuncPassCodegen.h  WrapFunctionWithMachineWrapper.h
irene-ghidra/: README.md  build.gradle
irene-ghidra/ghidra_scripts/: DecompileSingleFunctionRpc.java  FixGlobalRegister.java  PropagatePPCConstantReferences.java  SpecifyMultipleExample.java  SpecifySingleFunction.java  anvillExportScript.java  anvillHeadlessExportScript.java  anvillHeadlessFunctionExport.java  printIreneCFG.java
irene-ghidra/src/main/java/anvill/: CodegenGrpcClient.java  PatchLangGrpcClient.java
irene-ghidra/src/main/java/compiler/: CommandLineDriver.java  CommandLineDriverException.java  DockerCommandLineDriver.java  PatchCompiler.java
irene-ghidra/src/main/scala/anvill/: AddressToSet.scala  AnvillPlugin.scala  BasicBlockContext.scala  BasicBlockSplit.scala  BiasedDisjointSet.scala  CompleteLifting.scala  CompositionalValueAnalysis.scala  ComputeNodeContext.scala  ForwardFixpoint.scala  IdealIntegerTransformer.scala  IdealIntervalDom.scala  JSONExporter.scala  LiveStackVariableLocations.scala  Util.scala  (+13 more)
irene-ghidra/src/test/scala/: BaseGzfTest.scala  BaseProgramLoadTest.scala  ChallengeTest.scala  ControlFlowSpecInsnTest.scala  LoadAndSpecifyProgramTest.scala  TestLiveness.scala  TestTypeConstraints.scala
lib/: CMakeLists.txt  Codegen.cpp  DecompileSpec.cpp  IreneLoweringInterface.cpp  LowLocCCBuilder.cpp  PatchCompiler.cpp  PatchIRCodegen.cpp  PhysicalLocationDecoder.cpp  SpecLayoutOverride.cpp  SpecLayoutOverride.h  SpecTypeProvider.cpp  SpecTypeProvider.h  SpecVarProvider.cpp  SpecVarProvider.h  TypeDecoder.cpp  UnsafeSpecLayoutOverride.cpp  Util.cpp  Version.cpp.in
lib/PatchIR/: CMakeLists.txt  PatchIRAttrs.cpp  PatchIRDialect.cpp  PatchIROps.cpp  PatchIRTypes.cpp
lib/PatchLang/: Expr.cpp  Lexer.cpp.re  Lifter.cpp  Parser.cpp  Stmt.cpp  Type.cpp
lib/Targets/: ARMBackend.td  Backend.td  Backends.cpp  ExplicitMappingBackend.cpp  GenericBackend.cpp  PPCBackend.td  SparcBackend.td  X86Backend.td
lib/Transforms/: RemoveProgramCounterAndMemory.cpp  ReplaceRelReferences.cpp  RestoreStackRelations.cpp  WrapFunctionWithMachineWrapper.cpp
packaging/: README.md  main.cmake
packaging/cmake/: dispatcher.cmake
patch_assembler/: pyproject.toml
patch_assembler/patch_assembler/: assembler.py
patch_assembler/patch_assembler/targets/: __init__.py  elf_amd64_linux_reloc.py  elf_arm_linux_reloc.py  elf_leon3_bare.py  elf_ppc_linux_reloc.py  elf_x86_64_linux_reloc.py  reloc_target.py
patch_assembler/shellphish_qemu/: pyproject.toml
patch_utils/: README.md  patch_utils.py
proofs/: Bignum.fst  Itv.fst
scripts/: build_metrics.py  debug_app_log.py  decompile.py  download_and_unpack_demo.sh  download_and_unpack_ghidra_dbs.sh  download_headless.py  install-prereqs.sh  render.py  roundtrip.py  switcher.py  test-ci.py  upload_metrics.py
tests/: test-fizzbuzz-elf-x64.spec.json  test-hello-elf-x64.spec.json  test_spec.json
tests/bins/: broken-fizzbuzz-elf-x64  challenge-3_amd64_program_c.elf  challenge8_arm_vuln  powerpc-e500-fibonacci  test-hello-elf-x64  x86_64-linux-gnu-fibonacci
tests/c/: test-hello.c
tests/c/known-failures/: test-fizzbuzz.c
tests/specs/: README.md  arm-linux-gnueabihf-fibonacci.proto  chal3_init_can_amd64.json  chal3_rx_brake_routine_amd64.json  chal3_rx_brake_routine_amd64_addr-uid.json  chal8_transport_handler.spec.json  chal9_spec_split_and_context_assignment.pb  chal9_transport_handler_hand_jammed_spec.json  challenge-1noprintf-amd64-vuln-1.spec.json  ppc-e500-fibonacci.proto  test-fizzbuzz-elf-x64.spec.json  test-shared-add-elf-arm64.spec.json  test-shared-add-elf-x64.spec.json  x86_64-linux-fibonacci.proto
ui_script/: README.md  pyproject.toml
ui_script/tests/: test_ui_script.py
ui_script/ui_script/: main.py
utils/: CMakeLists.txt
utils/TargetTblGenBackend/: CMakeLists.txt  Main.cpp
(+102 files in other folders)
